@@ -1,3 +1,11 @@
+2012-10-05  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/exceptions.cpp: Applied patch by Martin Morgan which untangles
+	the clang includes driven by version, and uses direct tests for
+	presence of the header file 
+	* inst/include/RcppCommon.h: No longer define CLANG version meta
+	variables as we can directly include the relevant header
+
 2012-09-30  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.9.14
